--- a/app.css
+++ b/app.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: black;
+    background-color: rgb(48, 1, 42);
 }
 
 h1 {
